Add favicon and Apple Touch Icon to index.html
Added SVG favicon and Apple Touch Icon links.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+ 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COOLO | High-End Strategy + Execution</title>
     <script src="https://cdn.tailwindcss.com"></script>
+     <!-- For an SVG favicon (recommended for COOLO) -->
+    <link rel="icon" type="image/svg+xml" href="./assets/logos/logo.svg">
+
+    <!-- For an Apple Touch Icon (homescreen icon) -->
+    <link rel="apple-touch-icon" href="./assets/logos/logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Inter:wght@300;400;500;600;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
