--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Primary Meta Tags -->
     <meta name="title" content="COOLO | Brand Strategy & Design Execution">
-    <meta name="description" content="A senior-only brand studio specialized in the No Magic Formula™. We replace agency bloat with surgical precision. Creative Strategy, Art Direction, 3D Design Product Visualization, and Digital Content Execution.">
+    <meta name="description" content="A senior-only brand studio specialized in Brand Consulting and Visual Design. We replace agency bloat with surgical precision. Creative Strategy, Art Direction, 3D Design Product Visualization, and Digital Content Execution.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -24,8 +24,9 @@
     <meta property="twitter:image" content="assets/images/site-preview.webp">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="./assets/logos/favicon.svg">
-    <link rel="apple-touch-icon" href="./assets/logos/favicon.svg">
+    <!-- Fallback to ICO since SVG is empty -->
+    <link rel="icon" href="./assets/logos/favicon.ico" sizes="any">
+    <link rel="apple-touch-icon" href="./assets/logos/apple-touch-icon.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -131,6 +132,7 @@
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.1.1",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^11.5.1",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
