--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <meta property="og:url" content="https://coolo.co.nz/">
     <meta property="og:title" content="COOLO | Brand Strategy & Design Execution">
     <meta property="og:description" content="Mount Maunganui based senior unit specializing in brand clarity and creative firepower.">
-    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/hey-coolo/COOLO@main/assets/images/site-preview.webp">
+    <meta property="og:image" content="./assets/images/site-preview.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://coolo.co.nz/">
     <meta property="twitter:title" content="COOLO | Brand Strategy & Design Execution">
     <meta property="twitter:description" content="Mount Maunganui based senior unit specializing in brand clarity and creative firepower.">
-    <meta property="twitter:image" content="https://cdn.jsdelivr.net/gh/hey-coolo/COOLO@main/assets/images/site-preview.webp">
+    <meta property="twitter:image" content="./assets/images/site-preview.webp">
 
     <!-- Favicon -->
     <!-- Fallback to ICO since SVG is empty -->
     <link rel="icon" href="./assets/logos/favicon.ico" sizes="any">
-    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/hey-coolo/COOLO@main/assets/logos/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="./assets/logos/apple-touch-icon.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
