--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://coolo.co.nz/">
     <meta property="og:title" content="COOLO | Brand Strategy & Design Execution">
     <meta property="og:description" content="Mount Maunganui based senior unit specializing in brand clarity and creative firepower.">
-    <meta property="og:image" content="./assets/images/site-preview.webp">
+    <meta property="og:image" content="./assets/images/site-preview-1.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://coolo.co.nz/">
