--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         opacity: 0.03;
       }
     </style>
-</head>
+  </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
